--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,13 @@
-server:
-    port: 3000
 spring:
-    main:
-        web-application-type:
+    datasource:
+        url: jdbc:postgresql://localhost:5432/fullstack
+        username: postgres
+        password: postgres
+    jpa:
+        hibernate:
+            ddl-auto: none
+        properties:
+            hibernate:
+                dialect: org.hibernate.dialect.PostgreSQLDialect
+                format_sql: true
+        show-sql: true
