--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,8 @@ spring:
         password: postgres
     jpa:
         hibernate:
-            ddl-auto: none
+            ddl-auto: validate
         properties:
             hibernate:
-                dialect: org.hibernate.dialect.PostgreSQLDialect
                 format_sql: true
         show-sql: true
