--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.onecool</groupId>
-	<artifactId>fullstack</artifactId>
+	<artifactId>backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>fullstack</name>
-	<description>Full Stack Developer Course</description>
+	<name>backend-api</name>
+	<description>Backend Of A Full Stack Developer Course</description>
 	<properties>
 		<java.version>17</java.version>
 		<testcontainers.version>1.17.6</testcontainers.version>
