--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -18,8 +18,10 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: fullstack
+        volumes:
+          - db:/data/postgres
         ports:
-          - "5432:5432"
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
